@@ -10,7 +10,8 @@ devscripts (2.10.26) UNRELEASED; urgency=low
     + Check the initial lines of shell script wrappers. Based on a patch from
       Raphael Geissert
     + Fix a couple of the quoted block detection checks so as not to trigger
-      on escaped quotes
+      on escaped quotes and correctly count quotes within lines containing ''
+      or ""
     + Only rebuild the lists of expressions to search for when required,
       rather than for each line of each file
     + Disable "makefile mode" after checking a makefile if the next file to
